// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form exposes the expected functions from useForm hook 1`] = `
.emotion-0 {
  margin-bottom: 24px;
}

.emotion-2 {
  display: block;
  color: #0a0a0a;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  margin-bottom: 16px;
  margin-right: 4px;
}

.emotion-2:disabled {
  color: #c0c0c0;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

.emotion-3 {
  position: relative;
  margin-bottom: 8px;
}

.emotion-4 {
  box-sizing: border-box;
  width: 100%;
  cursor: default;
  background-color: transparent;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 1px;
  border-radius: 8px;
  color: #2e2e2e;
  text-overflow: ellipsis;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  padding: 12px;
  min-height: 48px;
}

.emotion-4::-webkit-input-placeholder {
  color: #535353;
}

.emotion-4::-moz-placeholder {
  color: #535353;
}

.emotion-4:-ms-input-placeholder {
  color: #535353;
}

.emotion-4::placeholder {
  color: #535353;
}

.emotion-4:focus:not(:disabled) {
  background-color: #fafafa;
  border-color: #0a68c1;
}

.emotion-4:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-4:disabled {
  border-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-4::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-4::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

.emotion-5 {
  min-height: 12px;
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-6:disabled {
  color: #c0c0c0;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-14 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #0a68c1;
  border-radius: 8px;
  color: #ffffff;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-14 svg {
  width: 24px;
  height: 24px;
}

.emotion-14 svg {
  fill: #ffffff;
}

.emotion-14:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-14:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-14:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-14:disabled svg {
  fill: #c0c0c0;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-17 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-17::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-17::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<form
  novalidate=""
>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <label
        class="emotion-2"
        for="mock-nk-1"
      >
        Email
      </label>
      <div
        class="emotion-3"
      >
        <input
          aria-describedby="mock-nk-1-assistive-text"
          aria-invalid="false"
          class="emotion-4"
          data-testid="text-input-email"
          id="mock-nk-1"
          name="email"
          spellcheck="false"
          type="text"
          value="test"
        />
      </div>
      <div
        class="emotion-5"
      >
        <p
          class="emotion-6"
          id="mock-nk-1-assistive-text"
        >
          Your email
        </p>
      </div>
    </div>
  </div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <label
        class="emotion-2"
        for="mock-nk-1"
      >
        Username
      </label>
      <div
        class="emotion-3"
      >
        <input
          aria-describedby="mock-nk-1-assistive-text"
          aria-invalid="false"
          class="emotion-4"
          data-testid="text-input-username"
          id="mock-nk-1"
          name="username"
          spellcheck="false"
          type="text"
        />
      </div>
      <div
        class="emotion-5"
      >
        <p
          class="emotion-6"
          id="mock-nk-1-assistive-text"
        >
          Your username
        </p>
      </div>
    </div>
  </div>
  <button
    class="emotion-14"
    data-testid="submit-button"
    type="submit"
  >
    <div
      class="emotion-15"
    >
      <div
        class="emotion-16"
      >
        <span
          class="emotion-17"
        >
          Submit
        </span>
      </div>
    </div>
  </button>
</form>
`;

exports[`Form renders with error and with submit validation and revalidation mode  1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-bottom: 24px;
}

.emotion-2 {
  display: block;
  color: #0a0a0a;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  margin-bottom: 16px;
  margin-right: 4px;
}

.emotion-2:disabled {
  color: #c0c0c0;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

.emotion-3 {
  position: relative;
  margin-bottom: 8px;
}

.emotion-4 {
  box-sizing: border-box;
  width: 100%;
  cursor: default;
  background-color: transparent;
  border-style: solid;
  border-color: #ef1703;
  border-width: 1px;
  border-radius: 8px;
  color: #2e2e2e;
  text-overflow: ellipsis;
  caret-color: #d20600;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  padding: 12px;
  min-height: 48px;
}

.emotion-4 {
  padding-right: 40px;
}

.emotion-4::-webkit-input-placeholder {
  color: #535353;
}

.emotion-4::-moz-placeholder {
  color: #535353;
}

.emotion-4:-ms-input-placeholder {
  color: #535353;
}

.emotion-4::placeholder {
  color: #535353;
}

.emotion-4::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-4::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(0, -50%);
  -moz-transform: translate(0, -50%);
  -ms-transform: translate(0, -50%);
  transform: translate(0, -50%);
  pointer-events: none;
  right: 12px;
}

.emotion-6 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #d20600;
  vertical-align: unset;
  display: inline-block;
}

.emotion-6.emotion-6 {
  width: 24px;
  height: 24px;
  fill: #d20600;
}

.emotion-8 {
  min-height: 12px;
}

.emotion-9 {
  margin: 0;
  padding: 1px 0;
  color: #d20600;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-9::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-9::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-20 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #0a68c1;
  border-radius: 8px;
  color: #ffffff;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-20 svg {
  width: 24px;
  height: 24px;
}

.emotion-20 svg {
  fill: #ffffff;
}

.emotion-20:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-20:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-20:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-20:disabled svg {
  fill: #c0c0c0;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-22 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-23 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-23::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-23::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<form
    novalidate=""
  >
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <label
          class="emotion-2"
          for="mock-nk-1"
        >
          Email
        </label>
        <div
          class="emotion-3"
        >
          <input
            aria-describedby="mock-nk-1-error-text"
            aria-invalid="true"
            class="emotion-4"
            data-testid="text-input-email"
            id="mock-nk-1"
            name="email"
            spellcheck="false"
            type="text"
            value="test"
          />
          <span
            class="emotion-5"
          >
            <svg
              aria-hidden="true"
              class="emotion-6 emotion-7"
              data-testid="error-icon"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
              />
            </svg>
          </span>
        </div>
        <div
          class="emotion-8"
        >
          <p
            aria-live="polite"
            class="emotion-9"
            id="mock-nk-1-error-text"
            role="alert"
          >
            Please provide a valid email
          </p>
        </div>
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <label
          class="emotion-2"
          for="mock-nk-1"
        >
          Username
        </label>
        <div
          class="emotion-3"
        >
          <input
            aria-describedby="mock-nk-1-error-text"
            aria-invalid="true"
            class="emotion-4"
            data-testid="text-input-username"
            id="mock-nk-1"
            name="username"
            spellcheck="false"
            type="text"
          />
          <span
            class="emotion-5"
          >
            <svg
              aria-hidden="true"
              class="emotion-6 emotion-7"
              data-testid="error-icon"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
              />
            </svg>
          </span>
        </div>
        <div
          class="emotion-8"
        >
          <p
            aria-live="polite"
            class="emotion-9"
            id="mock-nk-1-error-text"
            role="alert"
          >
            Required field
          </p>
        </div>
      </div>
    </div>
    <button
      class="emotion-20"
      data-testid="submit-button"
      type="submit"
    >
      <div
        class="emotion-21"
      >
        <div
          class="emotion-22"
        >
          <span
            class="emotion-23"
          >
            Submit
          </span>
        </div>
      </div>
    </button>
  </form>
</DocumentFragment>
`;

exports[`Form renders with error on blur 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-bottom: 24px;
}

.emotion-2 {
  display: block;
  color: #0a0a0a;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  margin-bottom: 16px;
  margin-right: 4px;
}

.emotion-2:disabled {
  color: #c0c0c0;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

.emotion-3 {
  position: relative;
  margin-bottom: 8px;
}

.emotion-4 {
  box-sizing: border-box;
  width: 100%;
  cursor: default;
  background-color: transparent;
  border-style: solid;
  border-color: #ef1703;
  border-width: 1px;
  border-radius: 8px;
  color: #2e2e2e;
  text-overflow: ellipsis;
  caret-color: #d20600;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  padding: 12px;
  min-height: 48px;
}

.emotion-4 {
  padding-right: 40px;
}

.emotion-4::-webkit-input-placeholder {
  color: #535353;
}

.emotion-4::-moz-placeholder {
  color: #535353;
}

.emotion-4:-ms-input-placeholder {
  color: #535353;
}

.emotion-4::placeholder {
  color: #535353;
}

.emotion-4::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-4::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(0, -50%);
  -moz-transform: translate(0, -50%);
  -ms-transform: translate(0, -50%);
  transform: translate(0, -50%);
  pointer-events: none;
  right: 12px;
}

.emotion-6 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #d20600;
  vertical-align: unset;
  display: inline-block;
}

.emotion-6.emotion-6 {
  width: 24px;
  height: 24px;
  fill: #d20600;
}

.emotion-8 {
  min-height: 12px;
}

.emotion-9 {
  margin: 0;
  padding: 1px 0;
  color: #d20600;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-9::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-9::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-14 {
  box-sizing: border-box;
  width: 100%;
  cursor: default;
  background-color: transparent;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 1px;
  border-radius: 8px;
  color: #2e2e2e;
  text-overflow: ellipsis;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  padding: 12px;
  min-height: 48px;
}

.emotion-14::-webkit-input-placeholder {
  color: #535353;
}

.emotion-14::-moz-placeholder {
  color: #535353;
}

.emotion-14:-ms-input-placeholder {
  color: #535353;
}

.emotion-14::placeholder {
  color: #535353;
}

.emotion-14:focus:not(:disabled) {
  background-color: #fafafa;
  border-color: #0a68c1;
}

.emotion-14:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-14:disabled {
  border-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-14::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-14::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

.emotion-16 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-16:disabled {
  color: #c0c0c0;
}

.emotion-16::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-16::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-17 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #0a68c1;
  border-radius: 8px;
  color: #ffffff;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-17 svg {
  width: 24px;
  height: 24px;
}

.emotion-17 svg {
  fill: #ffffff;
}

.emotion-17:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-17:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-17:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-17:disabled svg {
  fill: #c0c0c0;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-19 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-20 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-20::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-20::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<form
    novalidate=""
  >
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <label
          class="emotion-2"
          for="mock-nk-1"
        >
          Email
        </label>
        <div
          class="emotion-3"
        >
          <input
            aria-describedby="mock-nk-1-error-text"
            aria-invalid="true"
            class="emotion-4"
            data-testid="text-input-email"
            id="mock-nk-1"
            name="email"
            spellcheck="false"
            type="text"
            value="test"
          />
          <span
            class="emotion-5"
          >
            <svg
              aria-hidden="true"
              class="emotion-6 emotion-7"
              data-testid="error-icon"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
              />
            </svg>
          </span>
        </div>
        <div
          class="emotion-8"
        >
          <p
            aria-live="polite"
            class="emotion-9"
            id="mock-nk-1-error-text"
            role="alert"
          >
            Please provide a valid email
          </p>
        </div>
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <label
          class="emotion-2"
          for="mock-nk-1"
        >
          Username
        </label>
        <div
          class="emotion-3"
        >
          <input
            aria-describedby="mock-nk-1-assistive-text"
            aria-invalid="false"
            class="emotion-14"
            data-testid="text-input-username"
            id="mock-nk-1"
            name="username"
            spellcheck="false"
            type="text"
          />
        </div>
        <div
          class="emotion-8"
        >
          <p
            class="emotion-16"
            id="mock-nk-1-assistive-text"
          >
            Your username
          </p>
        </div>
      </div>
    </div>
    <button
      class="emotion-17"
      data-testid="submit-button"
      type="submit"
    >
      <div
        class="emotion-18"
      >
        <div
          class="emotion-19"
        >
          <span
            class="emotion-20"
          >
            Submit
          </span>
        </div>
      </div>
    </button>
  </form>
</DocumentFragment>
`;

exports[`Form renders with error on submit 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-bottom: 24px;
}

.emotion-2 {
  display: block;
  color: #0a0a0a;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  margin-bottom: 16px;
  margin-right: 4px;
}

.emotion-2:disabled {
  color: #c0c0c0;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

.emotion-3 {
  position: relative;
  margin-bottom: 8px;
}

.emotion-4 {
  box-sizing: border-box;
  width: 100%;
  cursor: default;
  background-color: transparent;
  border-style: solid;
  border-color: #ef1703;
  border-width: 1px;
  border-radius: 8px;
  color: #2e2e2e;
  text-overflow: ellipsis;
  caret-color: #d20600;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  padding: 12px;
  min-height: 48px;
}

.emotion-4 {
  padding-right: 40px;
}

.emotion-4::-webkit-input-placeholder {
  color: #535353;
}

.emotion-4::-moz-placeholder {
  color: #535353;
}

.emotion-4:-ms-input-placeholder {
  color: #535353;
}

.emotion-4::placeholder {
  color: #535353;
}

.emotion-4::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-4::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(0, -50%);
  -moz-transform: translate(0, -50%);
  -ms-transform: translate(0, -50%);
  transform: translate(0, -50%);
  pointer-events: none;
  right: 12px;
}

.emotion-6 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #d20600;
  vertical-align: unset;
  display: inline-block;
}

.emotion-6.emotion-6 {
  width: 24px;
  height: 24px;
  fill: #d20600;
}

.emotion-8 {
  min-height: 12px;
}

.emotion-9 {
  margin: 0;
  padding: 1px 0;
  color: #d20600;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-9::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-9::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-20 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #0a68c1;
  border-radius: 8px;
  color: #ffffff;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-20 svg {
  width: 24px;
  height: 24px;
}

.emotion-20 svg {
  fill: #ffffff;
}

.emotion-20:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-20:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-20:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-20:disabled svg {
  fill: #c0c0c0;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-22 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-23 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-23::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-23::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<form
    novalidate=""
  >
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <label
          class="emotion-2"
          for="mock-nk-1"
        >
          Email
        </label>
        <div
          class="emotion-3"
        >
          <input
            aria-describedby="mock-nk-1-error-text"
            aria-invalid="true"
            class="emotion-4"
            data-testid="text-input-email"
            id="mock-nk-1"
            name="email"
            spellcheck="false"
            type="text"
            value="test"
          />
          <span
            class="emotion-5"
          >
            <svg
              aria-hidden="true"
              class="emotion-6 emotion-7"
              data-testid="error-icon"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
              />
            </svg>
          </span>
        </div>
        <div
          class="emotion-8"
        >
          <p
            aria-live="polite"
            class="emotion-9"
            id="mock-nk-1-error-text"
            role="alert"
          >
            Please provide a valid email
          </p>
        </div>
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <label
          class="emotion-2"
          for="mock-nk-1"
        >
          Username
        </label>
        <div
          class="emotion-3"
        >
          <input
            aria-describedby="mock-nk-1-error-text"
            aria-invalid="true"
            class="emotion-4"
            data-testid="text-input-username"
            id="mock-nk-1"
            name="username"
            spellcheck="false"
            type="text"
          />
          <span
            class="emotion-5"
          >
            <svg
              aria-hidden="true"
              class="emotion-6 emotion-7"
              data-testid="error-icon"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
              />
            </svg>
          </span>
        </div>
        <div
          class="emotion-8"
        >
          <p
            aria-live="polite"
            class="emotion-9"
            id="mock-nk-1-error-text"
            role="alert"
          >
            Required field
          </p>
        </div>
      </div>
    </div>
    <button
      class="emotion-20"
      data-testid="submit-button"
      type="submit"
    >
      <div
        class="emotion-21"
      >
        <div
          class="emotion-22"
        >
          <span
            class="emotion-23"
          >
            Submit
          </span>
        </div>
      </div>
    </button>
  </form>
</DocumentFragment>
`;

exports[`Form renders with error with 2 onBlur 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-bottom: 24px;
}

.emotion-2 {
  display: block;
  color: #0a0a0a;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  margin-bottom: 16px;
  margin-right: 4px;
}

.emotion-2:disabled {
  color: #c0c0c0;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

.emotion-3 {
  position: relative;
  margin-bottom: 8px;
}

.emotion-4 {
  box-sizing: border-box;
  width: 100%;
  cursor: default;
  background-color: transparent;
  border-style: solid;
  border-color: #ef1703;
  border-width: 1px;
  border-radius: 8px;
  color: #2e2e2e;
  text-overflow: ellipsis;
  caret-color: #d20600;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  padding: 12px;
  min-height: 48px;
}

.emotion-4 {
  padding-right: 40px;
}

.emotion-4::-webkit-input-placeholder {
  color: #535353;
}

.emotion-4::-moz-placeholder {
  color: #535353;
}

.emotion-4:-ms-input-placeholder {
  color: #535353;
}

.emotion-4::placeholder {
  color: #535353;
}

.emotion-4::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-4::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(0, -50%);
  -moz-transform: translate(0, -50%);
  -ms-transform: translate(0, -50%);
  transform: translate(0, -50%);
  pointer-events: none;
  right: 12px;
}

.emotion-6 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #d20600;
  vertical-align: unset;
  display: inline-block;
}

.emotion-6.emotion-6 {
  width: 24px;
  height: 24px;
  fill: #d20600;
}

.emotion-8 {
  min-height: 12px;
}

.emotion-9 {
  margin: 0;
  padding: 1px 0;
  color: #d20600;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-9::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-9::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-14 {
  box-sizing: border-box;
  width: 100%;
  cursor: default;
  background-color: transparent;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 1px;
  border-radius: 8px;
  color: #2e2e2e;
  text-overflow: ellipsis;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  padding: 12px;
  min-height: 48px;
}

.emotion-14::-webkit-input-placeholder {
  color: #535353;
}

.emotion-14::-moz-placeholder {
  color: #535353;
}

.emotion-14:-ms-input-placeholder {
  color: #535353;
}

.emotion-14::placeholder {
  color: #535353;
}

.emotion-14:focus:not(:disabled) {
  background-color: #fafafa;
  border-color: #0a68c1;
}

.emotion-14:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-14:disabled {
  border-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-14::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-14::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

.emotion-16 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-16:disabled {
  color: #c0c0c0;
}

.emotion-16::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-16::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-17 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #0a68c1;
  border-radius: 8px;
  color: #ffffff;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-17 svg {
  width: 24px;
  height: 24px;
}

.emotion-17 svg {
  fill: #ffffff;
}

.emotion-17:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-17:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-17:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-17:disabled svg {
  fill: #c0c0c0;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-19 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-20 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-20::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-20::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<form
    novalidate=""
  >
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <label
          class="emotion-2"
          for="mock-nk-1"
        >
          Email
        </label>
        <div
          class="emotion-3"
        >
          <input
            aria-describedby="mock-nk-1-error-text"
            aria-invalid="true"
            class="emotion-4"
            data-testid="text-input-email"
            id="mock-nk-1"
            name="email"
            spellcheck="false"
            type="text"
            value="test"
          />
          <span
            class="emotion-5"
          >
            <svg
              aria-hidden="true"
              class="emotion-6 emotion-7"
              data-testid="error-icon"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
              />
            </svg>
          </span>
        </div>
        <div
          class="emotion-8"
        >
          <p
            aria-live="polite"
            class="emotion-9"
            id="mock-nk-1-error-text"
            role="alert"
          >
            Please provide a valid email
          </p>
        </div>
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <label
          class="emotion-2"
          for="mock-nk-1"
        >
          Username
        </label>
        <div
          class="emotion-3"
        >
          <input
            aria-describedby="mock-nk-1-assistive-text"
            aria-invalid="false"
            class="emotion-14"
            data-testid="text-input-username"
            id="mock-nk-1"
            name="username"
            spellcheck="false"
            type="text"
          />
        </div>
        <div
          class="emotion-8"
        >
          <p
            class="emotion-16"
            id="mock-nk-1-assistive-text"
          >
            Your username
          </p>
        </div>
      </div>
    </div>
    <button
      class="emotion-17"
      data-testid="submit-button"
      type="submit"
    >
      <div
        class="emotion-18"
      >
        <div
          class="emotion-19"
        >
          <span
            class="emotion-20"
          >
            Submit
          </span>
        </div>
      </div>
    </button>
  </form>
</DocumentFragment>
`;

exports[`Form renders with inputs 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: block;
  color: #0a0a0a;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  margin-bottom: 16px;
  margin-right: 4px;
}

.emotion-1:disabled {
  color: #c0c0c0;
}

.emotion-1::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-1::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

.emotion-2 {
  position: relative;
  margin-bottom: 8px;
}

.emotion-3 {
  box-sizing: border-box;
  width: 100%;
  cursor: default;
  background-color: transparent;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 1px;
  border-radius: 8px;
  color: #2e2e2e;
  text-overflow: ellipsis;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  padding: 12px;
  min-height: 48px;
}

.emotion-3::-webkit-input-placeholder {
  color: #535353;
}

.emotion-3::-moz-placeholder {
  color: #535353;
}

.emotion-3:-ms-input-placeholder {
  color: #535353;
}

.emotion-3::placeholder {
  color: #535353;
}

.emotion-3:focus:not(:disabled) {
  background-color: #fafafa;
  border-color: #0a68c1;
}

.emotion-3:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-3:disabled {
  border-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

.emotion-4 {
  min-height: 12px;
}

.emotion-5 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-5:disabled {
  color: #c0c0c0;
}

.emotion-5::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-5::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<form
    novalidate=""
  >
    <div
      class="emotion-0"
    >
      <label
        class="emotion-1"
        for="mock-nk-1"
      >
        Email
      </label>
      <div
        class="emotion-2"
      >
        <input
          aria-describedby="mock-nk-1-assistive-text"
          aria-invalid="false"
          class="emotion-3"
          id="mock-nk-1"
          name="email"
          spellcheck="false"
          type="text"
        />
      </div>
      <div
        class="emotion-4"
      >
        <p
          class="emotion-5"
          id="mock-nk-1-assistive-text"
        >
          Your email
        </p>
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <label
        class="emotion-1"
        for="mock-nk-1"
      >
        Username
      </label>
      <div
        class="emotion-2"
      >
        <input
          aria-describedby="mock-nk-1-assistive-text"
          aria-invalid="false"
          class="emotion-3"
          id="mock-nk-1"
          name="username"
          spellcheck="false"
          type="text"
        />
      </div>
      <div
        class="emotion-4"
      >
        <p
          class="emotion-5"
          id="mock-nk-1-assistive-text"
        >
          Your username
        </p>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`Form renders with nested inputs 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-bottom: 24px;
}

.emotion-2 {
  display: block;
  color: #0a0a0a;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  margin-bottom: 16px;
  margin-right: 4px;
}

.emotion-2:disabled {
  color: #c0c0c0;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

.emotion-3 {
  position: relative;
  margin-bottom: 8px;
}

.emotion-4 {
  box-sizing: border-box;
  width: 100%;
  cursor: default;
  background-color: transparent;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 1px;
  border-radius: 8px;
  color: #2e2e2e;
  text-overflow: ellipsis;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  padding: 12px;
  min-height: 48px;
}

.emotion-4::-webkit-input-placeholder {
  color: #535353;
}

.emotion-4::-moz-placeholder {
  color: #535353;
}

.emotion-4:-ms-input-placeholder {
  color: #535353;
}

.emotion-4::placeholder {
  color: #535353;
}

.emotion-4:focus:not(:disabled) {
  background-color: #fafafa;
  border-color: #0a68c1;
}

.emotion-4:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-4:disabled {
  border-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-4::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-4::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

.emotion-5 {
  min-height: 12px;
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-6:disabled {
  color: #c0c0c0;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-14 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #0a68c1;
  border-radius: 8px;
  color: #ffffff;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-14 svg {
  width: 24px;
  height: 24px;
}

.emotion-14 svg {
  fill: #ffffff;
}

.emotion-14:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-14:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-14:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-14:disabled svg {
  fill: #c0c0c0;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-17 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-17::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-17::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<form
    novalidate=""
  >
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <label
          class="emotion-2"
          for="mock-nk-1"
        >
          Email
        </label>
        <div
          class="emotion-3"
        >
          <input
            aria-describedby="mock-nk-1-assistive-text"
            aria-invalid="false"
            class="emotion-4"
            data-testid="text-input-email"
            id="mock-nk-1"
            name="email"
            spellcheck="false"
            type="text"
            value="test"
          />
        </div>
        <div
          class="emotion-5"
        >
          <p
            class="emotion-6"
            id="mock-nk-1-assistive-text"
          >
            Your email
          </p>
        </div>
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <label
          class="emotion-2"
          for="mock-nk-1"
        >
          Username
        </label>
        <div
          class="emotion-3"
        >
          <input
            aria-describedby="mock-nk-1-assistive-text"
            aria-invalid="false"
            class="emotion-4"
            data-testid="text-input-username"
            id="mock-nk-1"
            name="username"
            spellcheck="false"
            type="text"
          />
        </div>
        <div
          class="emotion-5"
        >
          <p
            class="emotion-6"
            id="mock-nk-1-assistive-text"
          >
            Your username
          </p>
        </div>
      </div>
    </div>
    <button
      class="emotion-14"
      data-testid="submit-button"
      type="submit"
    >
      <div
        class="emotion-15"
      >
        <div
          class="emotion-16"
        >
          <span
            class="emotion-17"
          >
            Submit
          </span>
        </div>
      </div>
    </button>
  </form>
</DocumentFragment>
`;

exports[`Form renders with onBlur validation 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-bottom: 24px;
}

.emotion-2 {
  display: block;
  color: #0a0a0a;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
  margin-bottom: 16px;
  margin-right: 4px;
}

.emotion-2:disabled {
  color: #c0c0c0;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

.emotion-3 {
  position: relative;
  margin-bottom: 8px;
}

.emotion-4 {
  box-sizing: border-box;
  width: 100%;
  cursor: default;
  background-color: transparent;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 1px;
  border-radius: 8px;
  color: #2e2e2e;
  text-overflow: ellipsis;
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  padding: 12px;
  min-height: 48px;
}

.emotion-4::-webkit-input-placeholder {
  color: #535353;
}

.emotion-4::-moz-placeholder {
  color: #535353;
}

.emotion-4:-ms-input-placeholder {
  color: #535353;
}

.emotion-4::placeholder {
  color: #535353;
}

.emotion-4:focus:not(:disabled) {
  background-color: #fafafa;
  border-color: #0a68c1;
}

.emotion-4:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-4:disabled {
  border-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-4::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-4::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

.emotion-5 {
  min-height: 12px;
}

.emotion-6 {
  margin: 0;
  padding: 1px 0;
  color: #535353;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-6:disabled {
  color: #c0c0c0;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-14 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #0a68c1;
  border-radius: 8px;
  color: #ffffff;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-14 svg {
  width: 24px;
  height: 24px;
}

.emotion-14 svg {
  fill: #ffffff;
}

.emotion-14:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-14:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-14:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-14:disabled svg {
  fill: #c0c0c0;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-17 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-17::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-17::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<form
    novalidate=""
  >
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <label
          class="emotion-2"
          for="mock-nk-1"
        >
          Email
        </label>
        <div
          class="emotion-3"
        >
          <input
            aria-describedby="mock-nk-1-assistive-text"
            aria-invalid="false"
            class="emotion-4"
            data-testid="text-input-email"
            id="mock-nk-1"
            name="email"
            spellcheck="false"
            type="text"
            value="test"
          />
        </div>
        <div
          class="emotion-5"
        >
          <p
            class="emotion-6"
            id="mock-nk-1-assistive-text"
          >
            Your email
          </p>
        </div>
      </div>
    </div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <label
          class="emotion-2"
          for="mock-nk-1"
        >
          Username
        </label>
        <div
          class="emotion-3"
        >
          <input
            aria-describedby="mock-nk-1-assistive-text"
            aria-invalid="false"
            class="emotion-4"
            data-testid="text-input-username"
            id="mock-nk-1"
            name="username"
            spellcheck="false"
            type="text"
          />
        </div>
        <div
          class="emotion-5"
        >
          <p
            class="emotion-6"
            id="mock-nk-1-assistive-text"
          >
            Your username
          </p>
        </div>
      </div>
    </div>
    <button
      class="emotion-14"
      data-testid="submit-button"
      type="submit"
    >
      <div
        class="emotion-15"
      >
        <div
          class="emotion-16"
        >
          <span
            class="emotion-17"
          >
            Submit
          </span>
        </div>
      </div>
    </button>
  </form>
</DocumentFragment>
`;
